Squashing Bugs

--- a/Portfolio/Pages/Internship/Internship.css
+++ b/Portfolio/Pages/Internship/Internship.css
@@ -57,8 +57,7 @@ nav ul li a:hover {
   border-radius: 3px;
   border-width: 5px;
   image-rendering: auto;
-  width:fit-content;
-  height:fit-content;
+  justify-content: center;
 }
 
 /*Footer of the page*/
